<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical" >

      <ImageView
          android:id="@+id/knox_logo"
          android:layout_width="83dp"
          android:layout_height="83dp"
          android:layout_gravity="center_horizontal"
          android:padding="15dp"
          android:src="@drawable/knox_icon" />
    
     <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name_display"
        android:textSize="18sp" 
        android:textStyle="bold"
		/>
     
     <TextView
        android:id="@+id/versioninfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_version"
        android:textSize="15sp" 
        
		/>
     
      <TextView
        android:id="@+id/sdkversioninfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/SDK_version"
        android:textSize="15sp" 
        
		/>

     <TextView
         android:id="@+id/aboutappinfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingTop="10dp"
         android:layout_marginTop="20dp"
         android:text="@string/app_desc"
         android:textSize="15sp"
         />

</LinearLayout>
